syntax = "proto3";
package v1;

option go_package = "./v1";

import "google/protobuf/any.proto";
import "pb/v1/validate/validate.proto";

service CircleService {
  rpc List (ListRequest) returns (ListResponse) {}
  rpc Get (GetCircleRequest) returns (Circle) {}
  rpc SyncAll (SyncAllRequest) returns (google.protobuf.Any) {}
  rpc Sync (GetCircleRequest) returns (google.protobuf.Any) {}
  rpc Create (Circle) returns (google.protobuf.Any) {} 
}

message ListRequest {
  optional int64 limit = 1;
  optional string continue = 2;
  optional string label = 3;
  string namespace = 4;
}

message ListResponse {
  repeated CircleMetadata items = 1; 
}

message GetCircleRequest {
  string name = 1;
  string namespace = 2;
}



message SyncAllRequest {
  optional string label = 1;
  optional string namespace = 2;
}

message CanaryRouting {
  int64 weight = 1;
}

message CircleMatch {
  map<string, string> headers = 1;
}

message CircleSegment {
  string key = 1;
  string value = 2;
  string condition = 3; 
}

message DefaultRouting {
  CircleMatch customMatch = 1;
  repeated CircleSegment segments = 2;
}

message CircleRouting {
  string strategy = 1;
  optional CanaryRouting canary = 2;
  optional DefaultRouting default = 3;
}

message CircleModuleOverride {
  string key = 1;
  string value = 2;
}

message CircleEnvironment {
  string key = 1;
  string value = 2;
}

message CircleStatusResource {
  string group = 1;
  string kind = 2;
  string name = 3;
  string namespace = 4;
  string health = 5;
  string error = 6;
}

message CircleStatusModule {
  string status = 1;
  string error = 2;
  repeated CircleStatusResource resources = 3;
}

message CircleStatus {
  map<string, CircleStatusModule> modules = 1;
}

message CircleModule {
  string name = 1;
  string namespace = 2;
  string revision = 3;
  repeated CircleModuleOverride overrides = 4;
}

message Circle {
  string name = 1 [(validate.rules).string.min_len = 1];
  string namespace = 2 [(validate.rules).string.min_len = 1];
  bool isDefault = 3;
  CircleRouting routing = 4 [(validate.rules).message.required = true];;
  repeated CircleModule modules = 5 ;
  repeated CircleEnvironment environments = 6;
  CircleStatus status = 7;
}

message CircleModuleMetadata {
  string name = 1;
  string status = 4;
  optional string error = 5;
}

message CircleMetadata {
  string name = 1 ;
  string description = 2;
  string namespace = 3;
  bool isDefault = 4;
  string status = 5;
  string error = 6;
  repeated CircleModuleMetadata modules = 7;
}

